test/testPrint/print2.out
print2.rask:3:4: error: unknown identifier 'xx'

