test/testPrint/print2.rask
main() -> void
{
    xx(1);
    print(-2);
}
